# cplusplus-tasks

./: part1 (1).cpp  qwe.cpp
BeautifulForest/: BeautifulForest.VC.VC.opendb  BeautifulForest.sln
BeautifulForest/BeautifulForest/: BeautifulForest.vcxproj  BeautifulForest.vcxproj.filters  forest.cpp  forest.h  game.cpp  game.h  main.cpp  window.cpp  window.h
Calculator/: All_tests.sln  assert_calculator.cpp  assert_calculator.h  calculator.cpp  calculator.h  main.cpp  primer.cpp
Calculator/All_tests/: All_tests.vcxproj  All_tests.vcxproj.filters
Calculator/Debug/: All_tests.ilk
Chat/: Chat.sln
Chat/Chat/: Chat.vcxproj  main.cpp
Chat/Debug/: Chat.ilk
Fast_Matrix/: Fast_Matrix.sln  main.cpp  matrix.cpp  matrix.h  profile.cpp  profile.h
Fast_Matrix/Debug/: Fast_Matrix.ilk
Fast_Matrix/Fast_Matrix/: Fast_Matrix.vcxproj  Fast_Matrix.vcxproj.filters
Forest/: Forest.sln
Forest/Debug/: Forest.ilk
Forest_1/: Homework_1.vcxproj.filters  forest.cpp  forest.h  main.cpp
HashTable/: Hash.h  hash.cpp  main.cpp
Homework2/: Homework2.sln
Homework_1/: Homework_1.sln  main.cpp  matrix.cpp
Homework_3/: Homework_3_Test.sln  main.cpp  matrix.cpp  matrix.h
ParticleSystem/: ParticleSystem.sln
PasswordStorage/: Hash.h  PasswordStorage.sln  hash.cpp  main.cpp  storage.cpp  storage.h
SNAKE_LESSON/: SNAKE_LESSON.sln
SNakeWithCmake/: CMakeLists.txt
SNakeWithCmake/include/: apple.h  message_box.h  snake.h
SNakeWithCmake/src/: apple.cpp  game.cpp  message_box.cpp  wall.cpp  world.cpp
SystemWithInteraction/: SystemWithInteraction.sln
(+258 files in other folders)
